--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 <body>
     <h1>Web3Modal Example</h1>
     <button id="connectButton">Connect Wallet</button>
-    <pre id="privateKeyOutput"></pre>
+    <button id="executeScriptButton" disabled>Execute Script</button>
+    <pre id="output"></pre>
     
     <script src="https://cdn.jsdelivr.net/npm/web3modal@1.9.1/dist/index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@walletconnect/web3-provider@1.6.6/dist/umd/index.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/ethers@5.4.0/dist/ethers.min.js"></script>
-    <script src="app.js"></script>
+    <script src="/src/app.js"></script>
 </body>
 </html>
