--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web3Modal Example</title>
+    <title>New Web3Modal Example</title>
 </head>
 <body>
     <h1>Web3Modal Example</h1>
     <button id="connectButton">Connect Wallet</button>
     <button id="executeScriptButton" disabled>Execute Script</button>
     <pre id="output"></pre>
-    
+
     <script src="https://cdn.jsdelivr.net/npm/web3modal@1.9.1/dist/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@walletconnect/web3-provider@1.6.6/dist/umd/index.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/ethers@5.4.0/dist/ethers.min.js"></script>
